--- a/AdminApp/Views/Shared/Categorys/_Layout.cshtml
+++ b/AdminApp/Views/Shared/Categorys/_Layout.cshtml
@@ -10,10 +10,10 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" href="/Products">Sản phẩm</a>
+                            <a class="nav-link" href="/Products">Sản phẩm</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/ProductCategories">Danh mục</a>
+                            <a class="nav-link active" href="/ProductCategories">Danh mục</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/Producers">Nhà cung cấp</a>
