--- a/AdminApp/Views/Products/Add.cshtml
+++ b/AdminApp/Views/Products/Add.cshtml
@@ -7,7 +7,16 @@
 }
 <div class="row">
     <div class="col-md-12">
-        <div>@ViewBag.Status</div>
+        @{
+            if (ViewBag.Status == Utils.Status.Success)
+            {
+                <div class="alert alert-success" role="alert">@ViewBag.Status</div>
+            }
+            else if (ViewBag.Status == Utils.Status.Failed)
+            {
+                <div class="alert alert-danger" role="alert">@ViewBag.Status</div>
+            }
+        }
         <form asp-action="Add">
             <div class="form-row">
                 <div class="form-group col-md-6">
@@ -40,8 +49,8 @@
                     <label class="custom-file-label" for="inputGroupFile01">Chọn file</label>
                 </div>
                 @*<label asp-for="Image" class="control-label">Hình ảnh</label>
-                    <input asp-for="Image" class="form-control" />
-                    <span asp-validation-for="Image" class="text-danger"></span>*@
+                <input asp-for="Image" class="form-control" />
+                <span asp-validation-for="Image" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label">Mô tả</label>
