--- a/AdminApp/Views/Shared/Producers/_Layout.cshtml
+++ b/AdminApp/Views/Shared/Producers/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "_Layout";
-    ViewData["Title"] = "Products Page";
+    ViewData["Title"] = "Producer Page";
 }
 
 <div class="container-fluid mt-4">
@@ -10,13 +10,13 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" href="/Products">Sản phẩm</a>
+                            <a class="nav-link" href="/Products">Sản phẩm</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/ProductCategories">Danh mục</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Producers">Nhà cung cấp</a>
+                            <a class="nav-link active" href="/Producers">Nhà cung cấp</a>
                         </li>
                     </ul>
                     <form class="form-inline my-2 my-lg-0">
