--- a/AdminApp/Views/ProductCategories/Edit.cshtml
+++ b/AdminApp/Views/ProductCategories/Edit.cshtml
@@ -25,19 +25,22 @@
                         </div>
                         <div class="form-group col-md-6">
                             <label asp-for="MetaTitle" class="control-label">Tiêu đề trên web</label>
-                            <input asp-for="MetaTitle" class="form-control" value="MetaTitle" />
+                            <input asp-for="MetaTitle" class="form-control" />
                             <span asp-validation-for="MetaTitle" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label asp-for="DisplayOrder" class="control-label">Vị trí hiển thị</label>
-                            <input asp-for="DisplayOrder" class="form-control" value="DisplayOrder" />
+                            <input asp-for="DisplayOrder" class="form-control" />
                             <span asp-validation-for="DisplayOrder" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-6">
                             <label asp-for="ShowOnHome" class="control-label">Hiển thị</label>
-                            <input asp-for="ShowOnHome" class="form-control" value="" />
+                            <select asp-for="ShowOnHome" class="form-control" >
+                                <option value="true">Hiển thị</option>
+                                <option value="false">Ẩn</option>
+                            </select>
                             <span asp-validation-for="ShowOnHome" class="text-danger"></span>
                         </div>
                     </div>
