--- a/AdminApp/Views/Products/Create.cshtml
+++ b/AdminApp/Views/Products/Create.cshtml
@@ -1,9 +1,9 @@
 ﻿@model DataAccess.Entities.Product
+@using DataAccess.Entities
 @{
     Layout = "Products/_Layout";
-}
-@{
-
+    List<Producer> producers = ViewBag.Producers;
+    List<ProductCategory> productCategories = ViewBag.ProductCategories;
 }
 <div class="row">
     <div class="col-md-12">
@@ -17,7 +17,7 @@
                 <div class="alert alert-danger" role="alert">@ViewBag.Status</div>
             }
         }
-        <form asp-action="Add">
+        <form asp-action="Create">
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label asp-for="Name" class="control-label">Tên</label>
@@ -33,12 +33,22 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label asp-for="ProducerId" class="control-label">Nhà cung cấp</label>
-                    <input asp-for="ProducerId" class="form-control" />
+                    <select asp-for="ProducerId" class="form-control" >
+                        @foreach(var item in producers)
+                        {
+                            <option value="@item.Id">@item.Name</option>
+                        }
+                    </select>
                     <span asp-validation-for="ProducerId" class="text-danger"></span>
                 </div>
                 <div class="form-group col-md-6">
-                    <label asp-for="CategoryId" class="control-label">Loại sơn</label>
-                    <input asp-for="CategoryId" class="form-control" />
+                    <label asp-for="CategoryId" class="control-label">Danh mục</label>
+                    <select asp-for="CategoryId" class="form-control">
+                        @foreach (var item in productCategories)
+                        {
+                            <option value="@item.Id">@item.Name</option>
+                        }
+                    </select>
                     <span asp-validation-for="CategoryId" class="text-danger"></span>
                 </div>
             </div>
@@ -48,9 +58,6 @@
                     <input type="file" class="custom-file-input" id="inputGroupFile01">
                     <label class="custom-file-label" for="inputGroupFile01">Chọn file</label>
                 </div>
-                @*<label asp-for="Image" class="control-label">Hình ảnh</label>
-                <input asp-for="Image" class="form-control" />
-                <span asp-validation-for="Image" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label">Mô tả</label>
