--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -1,13 +1,14 @@
-﻿@model WebApp.Models.ListProduct
+﻿@model WebApp.Models.ListProAndCate
 @{
     ViewData["Title"] = "Home Page";
 }
 <div class="col-lg-3">
     <h1 class="my-4">Minh Hùng Shop</h1>
     <div class="list-group">
-        <a href="#" class="list-group-item">Category 1</a>
-        <a href="#" class="list-group-item">Category 2</a>
-        <a href="#" class="list-group-item">Category 3</a>
+        @for (int i = 0; i < Model.categories.Count; i++)
+        {
+            <a href="@Url.Action("Category", "Home", new { id = Model.categories[i].Id })" class="list-group-item">@Model.categories[i].Name</a>
+        }
     </div>
 </div>
 <!-- /.col-lg-3 -->
@@ -61,4 +62,4 @@
 
     </div>
 </div>
-    <!-- /.row -->
+<!-- /.row -->
