--- a/AdminApp/Views/Products/Index.cshtml
+++ b/AdminApp/Views/Products/Index.cshtml
@@ -32,8 +32,8 @@
                     <th scope="row">@(i + 1)</th>
                     <td>@products.ElementAt(i).Name</td>
                     <td>@products.ElementAt(i).Price</td>
-                    <td>@products.ElementAt(i).Producer.Name</td>
-                    <td>@products.ElementAt(i).Producer.Name</td>
+                    <td>@products.ElementAt(i).Name</td>
+                    <td>@products.ElementAt(i).Name</td>
                     <td>
                         <a asp-action="Edit" asp-route-id="@products.ElementAt(i).Id" class="text-warning">
                             <i class="fas fa-edit"></i>
