--- a/WebApp/Views/Shared/_Layoutweb.cshtml
+++ b/WebApp/Views/Shared/_Layoutweb.cshtml
@@ -1,4 +1,8 @@
-﻿@model WebApp.Models.ListProAndCate
+﻿@using DataAccess
+@{ 
+    DBContextIns dBContext = DBContextIns.getIns();
+    List<DataAccess.Entities.ProductCategory> categories = dBContext.ProductCategory.ToList();
+}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,15 +48,15 @@
     <!-- Page Content -->
     <div class="container">
         <div class="row">
-            @*<div class="col-lg-3">
+            <div class="col-lg-3">
                 <h1 class="my-4">Minh Hùng Shop</h1>
                 <div class="list-group">
-                    @for (int i = 0; i < Model.categories.Count; i++)
+                    @for (int i = 0; i < categories.Count; i++)
                     {
-                        <a href="@Url.Action("Category", "Home", new { id = Model.categories[i].Id })" class="list-group-item">@Model.categories[i].Name</a>
+                        <a href="@Url.Action("Category", "Home", new { id = categories[i].Id })" class="list-group-item">@categories[i].Name</a>
                     }
                 </div>
-            </div>*@
+            </div>
             @RenderBody()
             <!-- /.col-lg-9 -->
         </div>
