--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -1,16 +1,9 @@
-﻿@model WebApp.Models.ListProAndCate
+﻿@model WebApp.Models.Products
+@using PagedList.Mvc;
 @{
     ViewData["Title"] = "Home Page";
 }
-@*<div class="col-lg-3">
-    <h1 class="my-4">Minh Hùng Shop</h1>
-    <div class="list-group">
-        @for (int i = 0; i < Model.categories.Count; i++)
-        {
-            <a href="@Url.Action("Category", "Home", new { id = Model.categories[i].Id })" class="list-group-item">@Model.categories[i].Name</a>
-        }
-    </div>
-</div>*@
+
 <!-- /.col-lg-3 -->
 <div class="col-lg-9">
     <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
@@ -40,17 +33,17 @@
         </a>
     </div>
     <div class="row">
-        @for (int i = 0; i < Model.products.Count; i++)
+        @foreach (var item in Model.products)
         {
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <a href="@Url.Action("Index", "Product", new { id = item.Id })"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body">
                         <h4 class="card-title">
-                            <a href="#">@Model.products[i].Name</a>
+                            <a href="@Url.Action("Index", "Product", new { id = item.Id })">@item.Name</a>
                         </h4>
-                        <h5>@Model.products[i].Price VNĐ</h5>
-                        <p class="card-text">@Model.products[i].Description</p>
+                        <h5>@item.Price VNĐ</h5>
+                        <p class="card-text">@item.Description</p>
                     </div>
                     <div class="card-footer">
                         <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -58,8 +51,7 @@
                 </div>
             </div>
         }
-
-
+        
     </div>
 </div>
 <!-- /.row -->
