--- a/WebApp/Views/Product/Index.cshtml
+++ b/WebApp/Views/Product/Index.cshtml
@@ -1,8 +1,35 @@
-﻿
+﻿@model DataAccess.Entities.Product
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layoutweb.cshtml";
 }
-
-<h2>Index</h2>
-
+<div class="col-lg-9">
+    <div class="card mt-4">
+        <img class="card-img-top img-fluid" src="http://placehold.it/900x400" alt="">
+        <div class="card-body">
+            <h3 class="card-title">@Model.Name</h3>
+            <h4>@Model.Price</h4>
+            <p class="card-text">@Model.Description</p>
+            <span class="text-warning">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+        </div>
+    </div>
+    <!-- /.card -->
+    <div class="card card-outline-secondary my-4">
+        <div class="card-header">
+            Product Reviews
+        </div>
+        <div class="card-body">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
+            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
+            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
+            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+            <hr>
+            <a href="@Url.Action("GetProduct", "Cart", new { id = Model.Id })" class="btn btn-success">Leave a Review</a>
+        </div>
+    </div>
+    <!-- /.card -->
+</div>
