--- a/WebApp/Views/Shared/_Layoutweb.cshtml
+++ b/WebApp/Views/Shared/_Layoutweb.cshtml
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="@Url.Action("Index", "Home")">
                             Home
                             <span class="sr-only">(current)</span>
                         </a>
