--- a/AdminApp/Views/Products/Create.cshtml
+++ b/AdminApp/Views/Products/Create.cshtml
@@ -17,7 +17,7 @@
                 <div class="alert alert-danger" role="alert">@ViewBag.Status</div>
             }
         }
-        <form asp-action="Create">
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label asp-for="Name" class="control-label">Tên</label>
@@ -52,6 +52,7 @@
                     <span asp-validation-for="CategoryId" class="text-danger"></span>
                 </div>
             </div>
+
             <div class="form-group">
                 <label asp-for="Image" class="control-label">Hình ảnh</label>
                 <div class="custom-file">
