--- a/AdminApp/Views/Shared/_Layout.cshtml
+++ b/AdminApp/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
                             Khách hàng
                             <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
-                        <a class="nav-link collapsed" href="#">
+                        <a class="nav-link collapsed" href="Orders">
                             <div class="sb-nav-link-icon"><i class="fas fa-shopping-cart"></i></div>
                             Đơn hàng
                             <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
