--- a/WebApp/Views/Cart/Index.cshtml
+++ b/WebApp/Views/Cart/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model WebApp.Models.Products
+@*@model List<DataAccess.Entities.Product>*@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layoutweb.cshtml";
@@ -24,51 +25,86 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @for (int i = 0; i < Model.products.Count; i++)
+
+                        @if (Model.products.Count > 0)
                         {
-                            <tr>
-                                <td class="col-sm-8 col-md-6">
-                                    <div class="media">
-                                        <a class="thumbnail pull-left" href="#"> <img class="media-object" src="http://icons.iconarchive.com/icons/custom-icon-design/flatastic-2/72/product-icon.png" style="width: 72px; height: 72px;"> </a>
-                                        <div class="media-body">
-                                            <h4 class="media-heading"><a href="#">@Model.products[i].Name</a></h4>
-                                            <h5 class="media-heading"> by <a href="#">@Model.products[i].Producer</a></h5>
+                            decimal total = 0;
+                            for (int i = 0; i < Model.products.Count; i++)
+                            {
 
+                                <tr>
+                                    <td class="col-sm-8 col-md-6">
+                                        <div class="media">
+                                            <a class="thumbnail pull-left" href="#"> <img class="media-object" src="http://icons.iconarchive.com/icons/custom-icon-design/flatastic-2/72/product-icon.png" style="width: 72px; height: 72px;"> </a>
+                                            <div class="media-body">
+                                                <h4 class="media-heading"><a href="#">@Model.products[i].Name</a></h4>
+                                                <h5 class="media-heading"> by <a href="#">@Model.products[i].Producer</a></h5>
+
+                                            </div>
                                         </div>
-                                    </div>
-                                </td>
-                                <td class="col-sm-1 col-md-1" style="        text-align: center">
-                                    @using (Html.BeginForm("Update", "Cart", FormMethod.Post))
-                                    {
-                                        @Html.TextBoxFor(model => model.products[i].Quantity,  new { id = i})
+                                    </td>
+                                    <td class="col-sm-1 col-md-1" style="        text-align: center">
+                                        @using (Html.BeginForm("Update", "Cart", FormMethod.Post))
+                                        {
+                                            @Html.TextBoxFor(model => model.products[i].Quantity, new { id = Model.products[i].Id })
 
-                                        <button type="submit" size="10">Update</button>
-                                    }
+                                            <button type="submit" size="10">Update</button>
+                                        }
 
-                                </td>
-                                <td class="col-sm-1 col-md-1 text-center"><strong>@Model.products[i].Price</strong></td>
-                                <td class="col-sm-1 col-md-1 text-center"><strong>@(Model.products[i].Price * Model.products[i].Quantity)</strong></td>
-                                <td class="col-sm-1 col-md-1">
-                                    <button type="button" class="btn btn-danger">
-                                        <span class="glyphicon glyphicon-remove"></span> Remove
-                                    </button>
-                                </td>
-                            </tr>
+                                    </td>
+                                    <td class="col-sm-1 col-md-1 text-center"><strong>@Model.products[i].Price</strong></td>
+                                    <td class="col-sm-1 col-md-1 text-center"><strong>@(Model.products[i].Price * Model.products[i].Quantity)</strong></td>
+                                    <td class="col-sm-1 col-md-1">
+                                        @*<button type="button" class="btn btn-danger">
+                            <span class="glyphicon glyphicon-remove"></span> Remove
+                            <a href="@Url.Action("GetProduct", "Cart", new { id = Model.Id })" class="btn btn-success">Leave a Review</a>
+                        </button>*@
+                                        <a href="@Url.Action("Remove", "Cart", new { id = Model.products[i].Id })" class="btn btn-danger">Remove</a>
+                                    </td>
+                                </tr>
+               
+                            }
                         }
-                        <tr>
-                            <td>   </td>
-                            <td>   </td>
-                            <td>   </td>
-                            <td><h5>Subtotal</h5></td>
-                            <td class="text-right"><h5><strong>$24.59</strong></h5></td>
-                        </tr>
-                        <tr>
-                            <td>   </td>
-                            <td>   </td>
-                            <td>   </td>
-                            <td><h3>Total</h3></td>
-                            <td class="text-right"><h3><strong>$31.53</strong></h3></td>
-                        </tr>
+                        else
+                        {
+                            <span class="alert alert-danger"> Chưa có sản phẩm trong giỏ hàng</span>
+                        }
+                        @*@if (Model.Count > 0)
+        {
+            for (int i = 0; i < Model.Count; i++)
+            {
+                <tr>
+                    <td class="col-sm-8 col-md-6">
+                        <div class="media">
+                            <a class="thumbnail pull-left" href="#"> <img class="media-object" src="http://icons.iconarchive.com/icons/custom-icon-design/flatastic-2/72/product-icon.png" style="width: 72px; height: 72px;"> </a>
+                            <div class="media-body">
+                                <h4 class="media-heading"><a href="#">@Model[i].Name</a></h4>
+                                <h5 class="media-heading"> by <a href="#">@Model[i].Producer</a></h5>
+
+                            </div>
+                        </div>
+                    </td>
+                    <td class="col-sm-1 col-md-1" style="        text-align: center">
+                        @using (Html.BeginForm("Update", "Cart", FormMethod.Post))
+                        {
+                            @Html.TextBoxFor(model => model[i].Quantity)
+
+                            <button type="submit" size="10">Update</button>
+                        }
+
+                    </td>
+                    <td class="col-sm-1 col-md-1 text-center"><strong>@Model[i].Price</strong></td>
+                    <td class="col-sm-1 col-md-1 text-center"><strong>@(Model[i].Price * Model[i].Quantity)</strong></td>
+                    <td class="col-sm-1 col-md-1">
+                        <button type="button" class="btn btn-danger">
+                            <span class="glyphicon glyphicon-remove"></span> Remove
+                        </button>
+                    </td>
+                </tr>
+            }
+        }*@
+
+                    
                         <tr>
                             <td>
                                 <a asp-controller="Home" asp-action="Index" class="btn btn-primary" size="50px">
@@ -78,11 +114,9 @@
                             <td></td>
                             <td></td>
 
+                            <td></td>
                             <td>
-                               
-                            </td>
-                            <td>
-                                <a asp-action="Update" class="btn btn-primary">
+                                <a asp-controller="Pay" asp-action="Index" class="btn btn-primary">
                                     <i class="far fa-plus-square"></i> <span>Thanh toán</span>
                                 </a>
                             </td>
