--- a/AdminApp/Views/Products/Details.cshtml
+++ b/AdminApp/Views/Products/Details.cshtml
@@ -8,6 +8,7 @@
 <div>
     <h4>Product</h4>
     <hr />
+    <img alt="image product" src="@Model.Image" width="320px" height="100%"/>
     <div class="form-group col-md-6">
         <label asp-for="Name" class="control-label">Tên</label>
         <input asp-for="Name" class="form-control" disabled />
