--- a/AdminApp/Views/Products/Edit.cshtml
+++ b/AdminApp/Views/Products/Edit.cshtml
@@ -17,7 +17,7 @@
                 <div class="alert alert-danger" role="alert">@ViewBag.Status</div>
             }
         }
-                <form asp-action="Edit">
+                <form asp-action="Edit" method="post" enctype="multipart/form-data">
                     <div class="form-row">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <input type="hidden" asp-for="Id" />
@@ -57,8 +57,8 @@
                     <div class="form-group">
                         <label asp-for="Image" class="control-label">Hình ảnh</label>
                         <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="inputGroupFile01">
-                            <label class="custom-file-label" for="inputGroupFile01">Chọn file</label>
+                            <input type="file" class="custom-file-input" id="imageUpload" name="imageUpload" onchange="onChangeImage()" />
+                            <label class="custom-file-label" for="imageUpload" id="lblImageUpload">@Model.Image</label>
                         </div>
                     </div>
                     <div class="form-group">
@@ -81,4 +81,17 @@
                     </div>
                 </form>
     </div>
+    <script>
+           function onChangeImage() {
+               var image = document.getElementById("imageUpload");
+               var lblImage = document.getElementById("lblImageUpload");
+               if (image.files.length === 0) {
+                   lblImage.innerText = "Chọn file";
+               }
+               else {
+                   lblImage.innerText = image.files[0].name;
+
+               }
+           }
+    </script>
 </div>
