--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model WebApp.Models.Products
 @using PagedList.Mvc;
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layoutweb.cshtml";
 }
 
 <!-- /.col-lg-3 -->
@@ -51,7 +52,7 @@
                 </div>
             </div>
         }
-        
+
     </div>
 </div>
 <!-- /.row -->
