--- a/WebApp/Views/Shared/_Layoutweb.cshtml
+++ b/WebApp/Views/Shared/_Layoutweb.cshtml
@@ -12,9 +12,9 @@
     <meta name="author" content="">
     <title>Shop Homepage - Start Bootstrap Template</title>
     <!-- Bootstrap core CSS -->
-    <link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="~/css/shop-homepage.css" rel="stylesheet">
+  
   
 </head>
 <body>
